# elenchus-core

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-project-model-v0.md
docs/plans/: 2026-05-31-evaluation-test-execution-plan.md  2026-06-01-evidence-resolving-explanation-auditor-v2.md  2026-06-01-python-port.md  2026-06-02-tech-wide-lens-expansion.md  2026-06-06-project-model-v1-support-implementation-plan.md
docs/prompts/: 2026-05-31-execute-evaluation-tests-session.md
docs/schemas/: README.md  project-model-v1.schema.json
docs/specs/: 2026-06-01-evidence-resolving-explanation-auditor-v2.md  2026-06-02-tech-wide-lens-expansion.md
docs/verification/: 2026-05-31-evaluation-test-plan-opus-review.md  2026-06-01-evidence-auditor-v2-implementation.md  2026-06-01-evidence-auditor-v2-plan-review.md  2026-06-02-tech-wide-lens-plan-opus-review.md  2026-06-02-tech-wide-lens-spec-opus-review.md  2026-06-06-project-model-v1-plan-opus-review.md  ai-dataset-source-catalog.md  benchmark-curation.md  eval-methodology.md
evaluation_cases/: sre-signal-validation-sample.json
scripts/: run_eval_suite.py
tests/: test_cli.py  test_coverage_closure.py  test_curated_eval_cases.py  test_domain_lenses.py  test_eval_case_schema.py  test_eval_suite_runner.py  test_evaluator.py  test_evaluator_v2.py  test_evidence_contract.py  test_evidence_resolution.py  test_grounding_and_audit.py  test_http.py  test_paired_adversarial_ordering.py  test_project_model_v0.py  test_project_model_v1.py  test_provider_selection.py  test_recommendation_contract.py
(+19 files in other folders)
